@@ -25,6 +25,7 @@ t/is_mobile.t
 t/is_robot.t
 t/is_search.t
 t/is_tablet.t
+t/json.t
 t/kwalitee.t
 t/manifest.t
 t/metrics.t
